plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.0.0-beta4'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.11.0'
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.4'
}

shadowJar {
    archiveBaseName = 'ming-test'
    archiveClassifier = ''
    manifest {
        attributes 'Main-Class': 'ming.TestRunner'
    }
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
    }
    systemProperty 'bench.level', System.getenv('BENCH_LEVEL') ?: ''
    systemProperty 'test.filter', System.getProperty('test.filter') ?: ''
}
